--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,14 @@ spring.thymeleaf.mode=HTML
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.health.show-details=always
+management.metrics.export.prometheus.enabled=true
+
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 
 # Puerto del servidor (puedes cambiar el puerto si 8080 ya está en uso)
 server.port=8080
